force-app/main/default/objects/Field_Service_Contract__c/Field_Service_Contract__c.object-meta.xml
<CustomObject>
    <label>Contract</label>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>