force-app/main/default/objects/Field_Service_Contract__c/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <externalId>true</externalId>
    <label>Contract Number</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>