force-app/main/default/objects/Field_Service_Contract__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>