force-app/main/default/objects/Field_Service_Contract__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>Contract End</label>
    <type>Date</type>
</CustomField>