force-app/main/default/objects/Field_Service_Contract__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Contract Start</label>
    <type>Date</type>
</CustomField>